implementing assistant logic